--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,13 @@ dependencies {
     implementation 'androidx.compose.material:material:1.2.1'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.google.accompanist:accompanist-permissions:0.23.1"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.23.1"
     implementation 'com.google.maps.android:maps-compose:2.5.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
